--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <h1>{{'app-title' | translate}}</h1>
-<app-container cdkDropList cdkDropListOrientation="horizontal" (cdkDropListDropped)="drop($event)"></app-container>
+<app-container cdkDropList cdkDropListOrientation="horizontal" (cdkDropListDropped)="dropSections($event)"></app-container>
