--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,13 @@
+@import './colors.scss';
 :host {
-    display: flex;
-    flex-direction: column;
-    /* width: 100vw; */
-    height: 100vh;
-    margin: 0 auto;
-    padding: 0 50px;
-    font-family: 'Fixedsys', monospace;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  margin: 0 auto;
+  padding: 0 50px;
+  font-family: 'Fixedsys', monospace;
 }
 
 h1 {
-    text-align: center;
+  text-align: center;
 }
