--- a/src/app/colors.scss
+++ b/src/app/colors.scss
@@ -1,17 +1,17 @@
 $black: #000000;
 $white: #ffffff;
 $main-text: #5f5f5f;
-
 $background-modal: rgba(0, 0, 0, .8);
 $background-note: #f7f7f7;
 $section-header: #9786bd;
 $dropdown-hover: rgb(239, 239, 239);
-
+$lang-list: rgba(0, 0, 0, 0.35);
 $edit-icon: #c9eafe;
 $edit-icon-hover: #a7dbfc;
 $trash-icon: #ffc3c3;
 $trash-icon-hover: #fc9f9f;
-
+$input: #7ec9f8;
+$input-focus: rgba(76, 182, 231, 0.192);
+$input-disabled: #e9ecef;
 $invalid: rgb(236, 76, 76);
 $valid: rgb(23, 145, 23);
-
