--- a/src/app/components/container/container.component.scss
+++ b/src/app/components/container/container.component.scss
@@ -1,41 +1,66 @@
 @import '../../colors.scss';
 :host {
-    display: flex;
-    flex-grow: 1;
-    padding-bottom: 10px;
+  position: relative;
+  display: flex;
+  flex-grow: 1;
+  padding-bottom: 10px;
+}
+
+.languages {
+  position: absolute;
+  right: 2%;
+  top: -8%;
+  &__open-list:hover {
+    text-decoration: underline;
+  }
+  &__list {
+    position: absolute;
+    top: 96%;
+    right: 4%;
+    z-index: 10;
+    margin: 0;
+    padding: 0 1em;
+    list-style: none;
+    border: 1px solid $lang-list;
+    background-color: $white;
+    box-shadow: 2px 2px 0px 0px $lang-list;
+  }
+  &__change-btn:hover {
+    color: $trash-icon-hover;
+  }
 }
 
 .btn__add-section {
-    cursor: pointer;
-    position: relative;
-    min-width: 320px;
-    border: 1px solid $black;
+  cursor: pointer;
+  position: relative;
+  min-width: 320px;
+  border: 1px solid $black;
 }
 
 .icon__plus {
-    position: absolute;
-    left: 44%;
-    top: 51%;
-    stroke: $main-text;
-    color: $main-text;
-    font-size: 35px;
+  position: absolute;
+  left: 44%;
+  top: 51%;
+  stroke: $main-text;
+  color: $main-text;
+  font-size: 35px;
 }
 
 .cdk-drag-preview {
-    font-family: "Fixedsys", monospace;
-    box-sizing: border-box;
-    background-color: white;
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  font-family: "Fixedsys", monospace;
+  box-sizing: border-box;
+  background-color: white;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
-    opacity: 0;
+  opacity: 0;
 }
 
 .cdk-drag-animating {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
