--- a/src/app/modules/section/section/section.component.scss
+++ b/src/app/modules/section/section/section.component.scss
@@ -1,222 +1,233 @@
 @import '../../../colors.scss';
 :host {
-    min-width: 320px;
-    border: 1px solid $black;
+  min-width: 320px;
+  border: 1px solid $black;
 }
 
 :host:not(:last-child) {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 
 .section__header {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 45px;
-    background-color: $section-header;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 45px;
+  background-color: $section-header;
 }
 
 .section__property {
-    margin-left: 2px;
+  margin-left: 2px;
 }
 
 .section__title {
-    font-size: 18px;
-    color: $white;
+  font-size: 18px;
+  color: $white;
 }
 
 .dropdown {
-    display: none;
-    position: absolute;
-    right: 0;
-    top: 36px;
-    z-index: 99999;
-    list-style: none;
-    margin: 0;
-    padding: 4px 0;
-    background-color: $white;
-    border: 1px solid $section-header;
-    border-right: none;
-    font-size: 15px;
-    &__item {
-        padding: 5px 8px;
-        &:hover {
-            background-color: $dropdown-hover;
-        }
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 36px;
+  z-index: 10;
+  width: 170px;
+  list-style: none;
+  margin: 0;
+  padding: 4px 0;
+  background-color: $white;
+  border: 1px solid $section-header;
+  border-right: none;
+  font-size: 15px;
+  &__item {
+    padding: 5px 8px;
+    &:hover {
+      background-color: $dropdown-hover;
     }
+  }
 }
 
 .distribution {
-    &__group {
-        padding: 0;
-        margin: 0;
-        border: none;
-    }
-    &__title {
-        padding-top: 5px;
-    }
-    &__fields {
-        display: flex;
-        flex-direction: column;
-    }
+  &__group {
+    padding: 0;
+    margin: 0;
+    border: none;
+  }
+  &__title {
+    padding-top: 5px;
+  }
+  &__fields {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .section__setting {
-    margin-right: 4px;
-    margin-bottom: -1px;
-    &:hover .dropdown {
-        display: block;
-    }
+  margin-right: 4px;
+  margin-bottom: -1px;
+  &:hover .dropdown {
+    display: block;
+  }
 }
 
 .icon__setting,
 .icon__property {
-    stroke: $white;
-    color: $white;
-    font-size: 21px;
+  stroke: $white;
+  color: $white;
+  font-size: 21px;
 }
 
 .notes {
-    padding: 13px 6px 6px 6px;
-    overflow-y: auto;
-    max-height: 90vh;
-    &__bottom {
-        display: flex;
-        justify-content: space-between;
-    }
+  padding: 13px 6px 6px 6px;
+  overflow-y: auto;
+  max-height: 90vh;
+  &__bottom {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .add-note {
-    cursor: pointer;
-    outline: none;
-    width: 100%;
-    height: 40px;
+  cursor: pointer;
+  outline: none;
+  width: 100%;
+  height: 40px;
 }
 
 .icon__plus,
 .icon__close {
-    stroke: $main-text;
-    color: $main-text;
-    font-size: 21px;
+  stroke: $main-text;
+  color: $main-text;
+  font-size: 21px;
 }
 
 .sort__description:not(:last-child),
 .filter__description:not(:last-child) {
-    margin-bottom: 3px;
+  margin-bottom: 3px;
 }
 
 .sort__radio {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  &+label {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+    &::before {
+      content: '';
+      display: inline-block;
+      width: 1em;
+      height: 1em;
+      flex-shrink: 0;
+      flex-grow: 0;
+      border: 1px solid $main-text;
+      border-radius: 50%;
+      margin-right: 0.5em;
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 50% 50%;
+    }
+  }
+  &:not(:disabled):not(:checked)+label:hover::before {
+    border-color: $input;
+  }
+  &:not(:disabled):active+label::before {
+    border-color: $input;
+  }
+  &:focus+label::before {
+    box-shadow: 0 0 0 0.1rem $input-focus;
+  }
+  &:focus:not(:checked)+label::before {
+    border-color: $input;
+  }
+  &:disabled+label::before {
+    background-color: $input-disabled;
+  }
+  &:checked+label::after {
+    content: "";
     position: absolute;
-    z-index: -1;
-    opacity: 0;
-    &+label {
-        display: inline-flex;
-        align-items: center;
-        user-select: none;
-        &::before {
-            content: '';
-            display: inline-block;
-            width: 1em;
-            height: 1em;
-            flex-shrink: 0;
-            flex-grow: 0;
-            border: 1px solid $main-text;
-            border-radius: 50%;
-            margin-right: 0.5em;
-            background-repeat: no-repeat;
-            background-position: center center;
-            background-size: 50% 50%;
-        }
-    }
-    &:not(:disabled):not(:checked)+label:hover::before {
-        border-color: $section-header;
-    }
-    &:not(:disabled):active+label::before {
-        background-color: #d9c8e0;
-        border-color: #c1a5cc;
-    }
-    &:focus+label::before {
-        box-shadow: 0 0 0 0.1rem rgba(61, 28, 75, 0.192);
-    }
-    &:focus:not(:checked)+label::before {
-        border-color: #c1a5cc;
-    }
-    &:disabled+label::before {
-        background-color: #e9ecef;
-    }
-    &:checked+label::after {
-        content: "";
-        position: absolute;
-        left: 8%;
-        width: 0.4em;
-        height: 0.4em;
-        background-color: $section-header;
-        border-radius: 50%;
-    }
+    left: 8%;
+    width: 0.4em;
+    height: 0.4em;
+    background-color: $input;
+    border-radius: 50%;
+  }
 }
 
 .filter__checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  &+label {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+    &::before {
+      content: '';
+      display: inline-block;
+      width: 1em;
+      height: 1em;
+      flex-shrink: 0;
+      flex-grow: 0;
+      border: 1px solid $main-text;
+      border-radius: 0.25em;
+      margin-right: 0.5em;
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 50% 50%;
+    }
+  }
+  &:checked+label::before {
+    width: 1em;
+    height: 1em;
+    background-color: $input;
+  }
+  &:checked+label::after {
+    content: "";
     position: absolute;
-    z-index: -1;
-    opacity: 0;
-    &+label {
-        display: inline-flex;
-        align-items: center;
-        user-select: none;
-        &::before {
-            content: '';
-            display: inline-block;
-            width: 1em;
-            height: 1em;
-            flex-shrink: 0;
-            flex-grow: 0;
-            border: 1px solid $main-text;
-            border-radius: 0.25em;
-            margin-right: 0.5em;
-            background-repeat: no-repeat;
-            background-position: center center;
-            background-size: 50% 50%;
-        }
-    }
-    &:checked+label::before {
-        width: 1em;
-        height: 1em;
-        background-color: $section-header;
-        background-image: url(../../../../environments/img/check-mark.svg);
-    }
-    &:not(:disabled):not(:checked)+label:hover::before {
-        border-color: $section-header;
-    }
-    &:not(:disabled):active+label::before {
-        background-color: #c1a5cc;
-        border-color: #c1a5cc;
-    }
-    &:focus+label::before {
-        box-shadow: 0 0 0 0.1rem rgba(61, 28, 75, 0.192);
-    }
-    &:focus:not(:checked)+label::before {
-        border-color: #c1a5cc;
-    }
-    &:disabled+label::before {
-        background-color: #e9ecef;
-    }
+    left: 4%;
+    bottom: 25%;
+    width: 4px;
+    height: 9px;
+    border: solid $white;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+  }
+  &:not(:disabled):not(:checked)+label:hover::before {
+    border-color: $input;
+  }
+  &:not(:disabled):active+label::before {
+    background-color: $input;
+    border-color: $input;
+  }
+  &:focus+label::before {
+    box-shadow: 0 0 0 0.1rem $input-focus;
+  }
+  &:focus:not(:checked)+label::before {
+    border-color: $input;
+  }
+  &:disabled+label::before {
+    background-color: $input-disabled;
+  }
 }
 
 .cdk-drag-preview {
-    font-family: "Fixedsys", monospace;
-    box-sizing: border-box;
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  font-family: "Fixedsys", monospace;
+  box-sizing: border-box;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
-    opacity: 0;
+  opacity: 0;
 }
 
 .cdk-drag-animating {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
